// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Given we wish to allocte cases from an Interviewer to an Editor > should render the allocation page correctly > AllocationPage 1`] = `
{
  "asFragment": [Function],
  "baseElement": <body>
    <div>
      <div
        class="ons-panel ons-panel--info ons-panel--no-title ons-u-mt-m"
        data-testid="allocation-page-panel-panel"
        id="allocation-page-panel"
      >
        <span
          class="ons-panel__assistive-text ons-u-vh"
        >
          Important information:
           
        </span>
        <div
          class="ons-panel__body "
        >
          Allocate cases from an interviewer to an editor. All cases conducted by that interviewer will be allocated to the editor
        </div>
      </div>
      <br />
      <h1>
        FRS2504A
      </h1>
      <div
        class="ons-field"
      >
        <label
          class="ons-label"
          for="select-from"
        >
          Allocate cases from interviewer
        </label>
        <select
          class="ons-input ons-input--select"
          data-testid="select-from-input"
          id="select-from"
          name="select"
        >
          <option
            disabled=""
            value=""
          >
            Select an option
          </option>
          <option
            data-testid="select-from-option-bob"
            value="bob"
          >
            bob (2 case(s))
          </option>
          <option
            data-testid="select-from-option-jamester"
            value="jamester"
          >
            jamester (1 case(s))
          </option>
        </select>
      </div>
      <div
        class="ons-field"
      >
        <label
          class="ons-label"
          for="select-to"
        >
          To editor
        </label>
        <select
          class="ons-input ons-input--select"
          data-testid="select-to-input"
          id="select-to"
          name="select"
        >
          <option
            disabled=""
            value=""
          >
            Select an option
          </option>
          <option
            data-testid="select-to-option-Dave"
            value="Dave"
          >
            Dave (0 case(s))
          </option>
          <option
            data-testid="select-to-option-Jake"
            value="Jake"
          >
            Jake (2 case(s))
          </option>
          <option
            data-testid="select-to-option-Rich"
            value="Rich"
          >
            Rich (0 case(s))
          </option>
        </select>
      </div>
      <div
        class="ons-field"
      >
        <label
          class="ons-label"
          for="number-of-cases"
        >
          Number of cases
        </label>
        <select
          class="ons-input ons-input--select"
          data-testid="number-of-cases-input"
          id="number-of-cases"
          name="select"
        >
          <option
            disabled=""
            value=""
          >
            Select an option
          </option>
          <option
            data-testid="number-of-cases-option--1"
            value="-1"
          >
            All
          </option>
          <option
            data-testid="number-of-cases-option-50"
            value="50"
          >
            50
          </option>
          <option
            data-testid="number-of-cases-option-45"
            value="45"
          >
            45
          </option>
          <option
            data-testid="number-of-cases-option-40"
            value="40"
          >
            40
          </option>
          <option
            data-testid="number-of-cases-option-35"
            value="35"
          >
            35
          </option>
          <option
            data-testid="number-of-cases-option-30"
            value="30"
          >
            30
          </option>
          <option
            data-testid="number-of-cases-option-25"
            value="25"
          >
            25
          </option>
          <option
            data-testid="number-of-cases-option-20"
            value="20"
          >
            20
          </option>
          <option
            data-testid="number-of-cases-option-15"
            value="15"
          >
            15
          </option>
          <option
            data-testid="number-of-cases-option-10"
            value="10"
          >
            10
          </option>
          <option
            data-testid="number-of-cases-option-5"
            value="5"
          >
            5
          </option>
          <option
            data-testid="number-of-cases-option-1"
            value="1"
          >
            1
          </option>
        </select>
      </div>
      <br />
      <button
        class="ons-btn"
        type="button"
      >
        <span
          class="ons-btn__inner"
        >
          <span
            class="ons-btn__text"
          >
            Allocate
          </span>
        </span>
      </button>
    </div>
  </body>,
  "container": <div>
    <div
      class="ons-panel ons-panel--info ons-panel--no-title ons-u-mt-m"
      data-testid="allocation-page-panel-panel"
      id="allocation-page-panel"
    >
      <span
        class="ons-panel__assistive-text ons-u-vh"
      >
        Important information:
         
      </span>
      <div
        class="ons-panel__body "
      >
        Allocate cases from an interviewer to an editor. All cases conducted by that interviewer will be allocated to the editor
      </div>
    </div>
    <br />
    <h1>
      FRS2504A
    </h1>
    <div
      class="ons-field"
    >
      <label
        class="ons-label"
        for="select-from"
      >
        Allocate cases from interviewer
      </label>
      <select
        class="ons-input ons-input--select"
        data-testid="select-from-input"
        id="select-from"
        name="select"
      >
        <option
          disabled=""
          value=""
        >
          Select an option
        </option>
        <option
          data-testid="select-from-option-bob"
          value="bob"
        >
          bob (2 case(s))
        </option>
        <option
          data-testid="select-from-option-jamester"
          value="jamester"
        >
          jamester (1 case(s))
        </option>
      </select>
    </div>
    <div
      class="ons-field"
    >
      <label
        class="ons-label"
        for="select-to"
      >
        To editor
      </label>
      <select
        class="ons-input ons-input--select"
        data-testid="select-to-input"
        id="select-to"
        name="select"
      >
        <option
          disabled=""
          value=""
        >
          Select an option
        </option>
        <option
          data-testid="select-to-option-Dave"
          value="Dave"
        >
          Dave (0 case(s))
        </option>
        <option
          data-testid="select-to-option-Jake"
          value="Jake"
        >
          Jake (2 case(s))
        </option>
        <option
          data-testid="select-to-option-Rich"
          value="Rich"
        >
          Rich (0 case(s))
        </option>
      </select>
    </div>
    <div
      class="ons-field"
    >
      <label
        class="ons-label"
        for="number-of-cases"
      >
        Number of cases
      </label>
      <select
        class="ons-input ons-input--select"
        data-testid="number-of-cases-input"
        id="number-of-cases"
        name="select"
      >
        <option
          disabled=""
          value=""
        >
          Select an option
        </option>
        <option
          data-testid="number-of-cases-option--1"
          value="-1"
        >
          All
        </option>
        <option
          data-testid="number-of-cases-option-50"
          value="50"
        >
          50
        </option>
        <option
          data-testid="number-of-cases-option-45"
          value="45"
        >
          45
        </option>
        <option
          data-testid="number-of-cases-option-40"
          value="40"
        >
          40
        </option>
        <option
          data-testid="number-of-cases-option-35"
          value="35"
        >
          35
        </option>
        <option
          data-testid="number-of-cases-option-30"
          value="30"
        >
          30
        </option>
        <option
          data-testid="number-of-cases-option-25"
          value="25"
        >
          25
        </option>
        <option
          data-testid="number-of-cases-option-20"
          value="20"
        >
          20
        </option>
        <option
          data-testid="number-of-cases-option-15"
          value="15"
        >
          15
        </option>
        <option
          data-testid="number-of-cases-option-10"
          value="10"
        >
          10
        </option>
        <option
          data-testid="number-of-cases-option-5"
          value="5"
        >
          5
        </option>
        <option
          data-testid="number-of-cases-option-1"
          value="1"
        >
          1
        </option>
      </select>
    </div>
    <br />
    <button
      class="ons-btn"
      type="button"
    >
      <span
        class="ons-btn__inner"
      >
        <span
          class="ons-btn__text"
        >
          Allocate
        </span>
      </span>
    </button>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;

exports[`Given we wish to reallocte cases from an Editor to another Editor > should render the allocation page correctly > ReallocationPage 1`] = `
{
  "asFragment": [Function],
  "baseElement": <body>
    <div>
      <div
        class="ons-panel ons-panel--info ons-panel--no-title ons-u-mt-m"
        data-testid="allocation-page-panel-panel"
        id="allocation-page-panel"
      >
        <span
          class="ons-panel__assistive-text ons-u-vh"
        >
          Important information:
           
        </span>
        <div
          class="ons-panel__body "
        >
          Reallocate cases from one editor to another editor. All non-completed cases will be transferred
        </div>
      </div>
      <br />
      <h1>
        FRS2504A
      </h1>
      <div
        class="ons-field"
      >
        <label
          class="ons-label"
          for="select-from"
        >
          Reallocate cases from editor
        </label>
        <select
          class="ons-input ons-input--select"
          data-testid="select-from-input"
          id="select-from"
          name="select"
        >
          <option
            disabled=""
            value=""
          >
            Select an option
          </option>
          <option
            data-testid="select-from-option-Dave"
            value="Dave"
          >
            Dave (0 case(s))
          </option>
          <option
            data-testid="select-from-option-Jake"
            value="Jake"
          >
            Jake (2 case(s))
          </option>
          <option
            data-testid="select-from-option-Rich"
            value="Rich"
          >
            Rich (0 case(s))
          </option>
        </select>
      </div>
      <div
        class="ons-field"
      >
        <label
          class="ons-label"
          for="select-to"
        >
          To editor
        </label>
        <select
          class="ons-input ons-input--select"
          data-testid="select-to-input"
          id="select-to"
          name="select"
        >
          <option
            disabled=""
            value=""
          >
            Select an option
          </option>
          <option
            data-testid="select-to-option-Dave"
            value="Dave"
          >
            Dave (0 case(s))
          </option>
          <option
            data-testid="select-to-option-Jake"
            value="Jake"
          >
            Jake (2 case(s))
          </option>
          <option
            data-testid="select-to-option-Rich"
            value="Rich"
          >
            Rich (0 case(s))
          </option>
        </select>
      </div>
      <div
        class="ons-field"
      >
        <label
          class="ons-label"
          for="number-of-cases"
        >
          Number of cases
        </label>
        <select
          class="ons-input ons-input--select"
          data-testid="number-of-cases-input"
          id="number-of-cases"
          name="select"
        >
          <option
            disabled=""
            value=""
          >
            Select an option
          </option>
          <option
            data-testid="number-of-cases-option--1"
            value="-1"
          >
            All
          </option>
          <option
            data-testid="number-of-cases-option-50"
            value="50"
          >
            50
          </option>
          <option
            data-testid="number-of-cases-option-45"
            value="45"
          >
            45
          </option>
          <option
            data-testid="number-of-cases-option-40"
            value="40"
          >
            40
          </option>
          <option
            data-testid="number-of-cases-option-35"
            value="35"
          >
            35
          </option>
          <option
            data-testid="number-of-cases-option-30"
            value="30"
          >
            30
          </option>
          <option
            data-testid="number-of-cases-option-25"
            value="25"
          >
            25
          </option>
          <option
            data-testid="number-of-cases-option-20"
            value="20"
          >
            20
          </option>
          <option
            data-testid="number-of-cases-option-15"
            value="15"
          >
            15
          </option>
          <option
            data-testid="number-of-cases-option-10"
            value="10"
          >
            10
          </option>
          <option
            data-testid="number-of-cases-option-5"
            value="5"
          >
            5
          </option>
          <option
            data-testid="number-of-cases-option-1"
            value="1"
          >
            1
          </option>
        </select>
      </div>
      <br />
      <button
        class="ons-btn"
        type="button"
      >
        <span
          class="ons-btn__inner"
        >
          <span
            class="ons-btn__text"
          >
            Reallocate
          </span>
        </span>
      </button>
    </div>
  </body>,
  "container": <div>
    <div
      class="ons-panel ons-panel--info ons-panel--no-title ons-u-mt-m"
      data-testid="allocation-page-panel-panel"
      id="allocation-page-panel"
    >
      <span
        class="ons-panel__assistive-text ons-u-vh"
      >
        Important information:
         
      </span>
      <div
        class="ons-panel__body "
      >
        Reallocate cases from one editor to another editor. All non-completed cases will be transferred
      </div>
    </div>
    <br />
    <h1>
      FRS2504A
    </h1>
    <div
      class="ons-field"
    >
      <label
        class="ons-label"
        for="select-from"
      >
        Reallocate cases from editor
      </label>
      <select
        class="ons-input ons-input--select"
        data-testid="select-from-input"
        id="select-from"
        name="select"
      >
        <option
          disabled=""
          value=""
        >
          Select an option
        </option>
        <option
          data-testid="select-from-option-Dave"
          value="Dave"
        >
          Dave (0 case(s))
        </option>
        <option
          data-testid="select-from-option-Jake"
          value="Jake"
        >
          Jake (2 case(s))
        </option>
        <option
          data-testid="select-from-option-Rich"
          value="Rich"
        >
          Rich (0 case(s))
        </option>
      </select>
    </div>
    <div
      class="ons-field"
    >
      <label
        class="ons-label"
        for="select-to"
      >
        To editor
      </label>
      <select
        class="ons-input ons-input--select"
        data-testid="select-to-input"
        id="select-to"
        name="select"
      >
        <option
          disabled=""
          value=""
        >
          Select an option
        </option>
        <option
          data-testid="select-to-option-Dave"
          value="Dave"
        >
          Dave (0 case(s))
        </option>
        <option
          data-testid="select-to-option-Jake"
          value="Jake"
        >
          Jake (2 case(s))
        </option>
        <option
          data-testid="select-to-option-Rich"
          value="Rich"
        >
          Rich (0 case(s))
        </option>
      </select>
    </div>
    <div
      class="ons-field"
    >
      <label
        class="ons-label"
        for="number-of-cases"
      >
        Number of cases
      </label>
      <select
        class="ons-input ons-input--select"
        data-testid="number-of-cases-input"
        id="number-of-cases"
        name="select"
      >
        <option
          disabled=""
          value=""
        >
          Select an option
        </option>
        <option
          data-testid="number-of-cases-option--1"
          value="-1"
        >
          All
        </option>
        <option
          data-testid="number-of-cases-option-50"
          value="50"
        >
          50
        </option>
        <option
          data-testid="number-of-cases-option-45"
          value="45"
        >
          45
        </option>
        <option
          data-testid="number-of-cases-option-40"
          value="40"
        >
          40
        </option>
        <option
          data-testid="number-of-cases-option-35"
          value="35"
        >
          35
        </option>
        <option
          data-testid="number-of-cases-option-30"
          value="30"
        >
          30
        </option>
        <option
          data-testid="number-of-cases-option-25"
          value="25"
        >
          25
        </option>
        <option
          data-testid="number-of-cases-option-20"
          value="20"
        >
          20
        </option>
        <option
          data-testid="number-of-cases-option-15"
          value="15"
        >
          15
        </option>
        <option
          data-testid="number-of-cases-option-10"
          value="10"
        >
          10
        </option>
        <option
          data-testid="number-of-cases-option-5"
          value="5"
        >
          5
        </option>
        <option
          data-testid="number-of-cases-option-1"
          value="1"
        >
          1
        </option>
      </select>
    </div>
    <br />
    <button
      class="ons-btn"
      type="button"
    >
      <span
        class="ons-btn__inner"
      >
        <span
          class="ons-btn__text"
        >
          Reallocate
        </span>
      </span>
    </button>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;
